[project]
name = "pdf-tool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
    "matplotlib>=3.10.1",
    "pdf2image>=1.17.0",
    "pikepdf>=9.7.0",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "reportlab>=4.3.1",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]
